# Roger-Studio

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.claude/: launch.json
backend/: .env.example  Dockerfile  pyproject.toml  run.py
backend/app/: main.py  mcp_server.py  mcp_server_README.md
backend/app/models/: schemas.py
backend/app/routers/: analyze.py  artifacts.py  auto_label.py  claude_chat.py  cloud_chat.py  env_data.py  explain_raster.py  gemini_chat.py  olmoearth.py  openai_chat.py  polygon_stats.py  projects.py  reconstruct.py  stac_imagery.py  upload.py
backend/app/services/: _ft_ecosystem_classes.json  _phantom_tool_detect.py  artifacts.py  auto_label.py  claude_client.py  cloud_llm_client.py  data_ingest.py  database.py  gemini_client.py  gemma_client.py  geo_agent.py  geo_tools.py  olmoearth_datasets.py  olmoearth_demos.py  olmoearth_ft.py  olmoearth_inference.py  olmoearth_loader.py  olmoearth_model.py  openai_client.py  polygon_stats.py  raster_tiles.py  samgeo_labeler.py  sentinel2_fetch.py  stac_imagery.py  system_health.py  terrain.py  tipsv2_labeler.py  worldcover.py
backend/docker/: Dockerfile.vllm
backend/scripts/: FINDINGS_2026_04_29.md  bench_olmoearth_mangrove.py  bench_tipsv2_ade20k.py  bench_tipsv2_on_mangrove.py  viz_mangrove_bench.py
backend/tests/: TOOL_CALLING_BENCH_REPORT.md  test_api_end_to_end.py  test_artifacts.py  test_demo_job_id_parity.py  test_embedding_export.py  test_embedding_tools.py  test_geo_tools_ndvi.py  test_geo_tools_run_inference.py  test_olmoearth_ft.py  test_olmoearth_inference.py  test_olmoearth_model.py  test_raster_tiles.py  test_sentinel2_fetch.py  test_sliding_window.py  test_system_health.py  test_tipsv2_labeler.py  test_tool_calling_bench.py  test_worldcover.py
docs/: CAPABILITIES.md  EMBEDDINGS.md  FEW_SHOT.md  FOREST_LOSS_DRIVER.md  FT-USAGE.md  GEOJSON_EXPORT.md  LLM-CONVERSATIONS.md  RESEARCH-UX-IMPROVEMENTS.md  gemma-vllm.md  llm-setup.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/samples/: pa_karst_features.geojson  sf_parks.geojson  solar_sites.geojson
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AreaSelector.tsx  AutoLabel.tsx  CesiumView.tsx  ClaudeChat.tsx  CloudChat.tsx  CloudHub.tsx  DataSourcePicker.tsx  DataUpload.tsx  DatasetDetail.tsx  DraggablePanel.tsx  GeminiChat.tsx  GemmaChat.tsx  GuidedTour.tsx  InferenceLegendPanel.tsx  InferenceProgressMonitor.tsx  LLMExamples.tsx  LLMSettings.tsx  LabelClassEditor.tsx  LabelPanel.tsx  MapView.tsx  ModelInput.tsx  OffDistributionBanner.tsx  OlmoEarthDemoPairsList.tsx  OlmoEarthImport.tsx  OlmoEarthPanel.tsx  OpenAIChat.tsx  PolygonStats.tsx  ProjectMenu.tsx  SampleData.tsx  SampleRasters.tsx  Sidebar.tsx  SplitMap.tsx  StacImagery.tsx  TIPSv2Panel.tsx
frontend/src/components/ResultPanel/: ResultPanel.tsx
frontend/src/components/icons/: AnalysisTab.tsx  Basemaps.tsx  DeleteShape.tsx  DownloadGeoJSON.tsx  DrawLine.tsx  DrawPoint.tsx  DrawPolygon.tsx  DrawRectangle.tsx  Erase.tsx  FitToBounds.tsx  Globe3DTab.tsx  ImportDataset.tsx  LLMTab.tsx  MapTab.tsx  (+21 more)
frontend/src/constants/: headTrainingRegions.ts  olmoEarthCoverage.ts
frontend/src/hooks/: useCancellableSend.ts
frontend/src/types/: index.ts
frontend/src/util/: sessionStorage.ts
(+6 files in other folders)
